--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ on:
   # If specified, the workflow will be triggered automatically once you push to the `main` branch.
   # Replace `main` with your branch’s name
   push:
-    branches: ["main"]
+    branches: [ "main" ]
   # Specify to run a workflow manually from the Actions tab on GitHub
   workflow_dispatch:
 
@@ -32,7 +32,7 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container: registry.jetbrains.team/p/writerside/builder/writerside-builder:2.1.1963-p6759
+    container: registry.jetbrains.team/p/writerside/builder/writerside-builder:2.1.1969-p6786
 
     steps:
       - name: Checkout repository
@@ -40,41 +40,39 @@ jobs:
         with:
           fetch-depth: 0
 
-#      - name: Processing timestamps
-#        run: |
-#          git config --global --add safe.directory /__w/siarb.github.io/siarb.github.io
-#          mkdir -p ./timestamps
-#          echo "{" > ./timestamps/timestamps.json
-#          git ls-tree -r --name-only HEAD | grep -E '\.(topic|md)$' | xargs -n 1 -P 4 -I{} bash -c 'echo -e "\"$0\": \"$(git log -1 --format="%at" -- "$0")\","' {} >> ./timestamps/timestamps.json
-#          sed -i '$ s/.$//' ./timestamps/timestamps.json
-#          echo "}" >> ./timestamps/timestamps.json
-#          cat ./timestamps/timestamps.json
-#
-#      - name: Store timestamps file
-#        uses: actions/upload-artifact@v4
-#        with:
-#          name: timestamps.json
-#          path: ./timestamps/timestamps.json
-#
-#      - name: Download timestamps
-#        uses: actions/download-artifact@v4
-#        with:
-#          name: timestamps.json
-#          path: timestamps
+      #      - name: Processing timestamps
+      #        run: |
+      #          git config --global --add safe.directory /__w/siarb.github.io/siarb.github.io
+      #          mkdir -p ./timestamps
+      #          echo "{" > ./timestamps/timestamps.json
+      #          git ls-tree -r --name-only HEAD | grep -E '\.(topic|md)$' | xargs -n 1 -P 4 -I{} bash -c 'echo -e "\"$0\": \"$(git log -1 --format="%at" -- "$0")\","' {} >> ./timestamps/timestamps.json
+      #          sed -i '$ s/.$//' ./timestamps/timestamps.json
+      #          echo "}" >> ./timestamps/timestamps.json
+      #          cat ./timestamps/timestamps.json
+      #
+      #      - name: Store timestamps file
+      #        uses: actions/upload-artifact@v4
+      #        with:
+      #          name: timestamps.json
+      #          path: ./timestamps/timestamps.json
+      #
+      #      - name: Download timestamps
+      #        uses: actions/download-artifact@v4
+      #        with:
+      #          name: timestamps.json
+      #          path: timestamps
 
       - name: Build Writerside docs using Docker
         run: |
           set -x
-          pwd
           echo "Build documentation script started"
           export DISPLAY=:99
           Xvfb :99 &
           git config --global --add safe.directory .
-               /opt/builder/bin/idea.sh helpbuilderinspect -source-dir . -product "${INSTANCE}" --runner github -output-dir ./artifacts -pdf PDF.xml
-          #          /opt/builder/bin/idea.sh helpbuilderinspect -source-dir . -product "${INSTANCE}" --runner github -output-dir ./artifacts
+          /opt/builder/bin/idea.sh helpbuilderinspect -source-dir . -product ${{ env.INSTANCE }} --runner github -output-dir ./artifacts
           echo "Test existing artifacts"
-          #          test -e ./artifacts/${{ env.ARTIFACT }} && echo ${{ env.ARTIFACT }} exists
-          test -e ./artifacts/pdfSourceAUTO.pdf && echo pdfSourceAUTO.pdf exists
+          test -e ./artifacts/${{ env.ARTIFACT }} && echo ${{ env.ARTIFACT }} exists
+#          test -e ./artifacts/pdfSourceAUTO.pdf && echo pdfSourceAUTO.pdf exists
 #        uses: JetBrains/writerside-github-action@v4
 #        with:
 #          instance: ${{ env.INSTANCE }}
