--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,132 +5,39 @@ on:
     branches: [ "main" ]
   workflow_dispatch:
 
-permissions:
-  id-token: write
-  pages: write
-
 env:
   INSTANCE: 'Writerside2/hi'
   DOCKER_VERSION: '243.21565'
-  ALGOLIA_APP_NAME: 'ERUSDW4898'
-  ALGOLIA_INDEX_NAME: 'index_GH_test'
-  CONFIG_JSON_PRODUCT: 'HI'
-  CONFIG_JSON_VERSION: '1.0'
+  PDF: 'PDF.xml'
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    outputs:
-      algolia_artifact: ${{ steps.define-ids.outputs.algolia_artifact }}
-      artifact: ${{ steps.define-ids.outputs.artifact }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: Define instance id and artifacts
-        id: define-ids
+      - name: Define instance id
         run: |
-          INSTANCE=${INSTANCE#*/}
-          INSTANCE_ID_UPPER=$(echo "$INSTANCE" | tr '[:lower:]' '[:upper:]')
-          ARTIFACT="webHelp${INSTANCE_ID_UPPER}2-all.zip"
-          ALGOLIA_ARTIFACT="algolia-indexes-${INSTANCE_ID_UPPER}.zip"
-
-          # Print the values
-          echo "INSTANCE_ID_UPPER: $INSTANCE_ID_UPPER"
-          echo "ARTIFACT: $ARTIFACT"
-          echo "ALGOLIA_ARTIFACT: $ALGOLIA_ARTIFACT"
-
-          # Set the environment variables and outputs
+          INSTANCE_ID="${INSTANCE#*/}"
+          INSTANCE_ID_UPPER=$(echo "$INSTANCE_ID" | tr '[:lower:]' '[:upper:]')
           echo "INSTANCE_ID_UPPER=$INSTANCE_ID_UPPER" >> $GITHUB_ENV
-          echo "ARTIFACT=$ARTIFACT" >> $GITHUB_ENV
-          echo "ALGOLIA_ARTIFACT=$ALGOLIA_ARTIFACT" >> $GITHUB_ENV
-          echo "artifact=$ARTIFACT" >> $GITHUB_OUTPUT
-          echo "algolia_artifact=$ALGOLIA_ARTIFACT" >> $GITHUB_OUTPUT
+          echo "Extracted ID: $INSTANCE_ID_UPPER"
 
-      - name: Build docs using Writerside Docker builder
+      - name: Build Writerside docs using Docker
         uses: JetBrains/writerside-github-action@v4
         with:
           instance: ${{ env.INSTANCE }}
-          artifact: ${{ env.ARTIFACT }}
           docker-version: ${{ env.DOCKER_VERSION }}
+          pdf: ${{ env.PDF }}
 
-      - name: Save artifact with build results
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: docs
+          name: artifact
           path: |
-            artifacts/${{ env.ARTIFACT }}
-            artifacts/report.json
-            artifacts/${{ env.ALGOLIA_ARTIFACT }}
+            artifacts/pdfSource${{ env.INSTANCE_ID_UPPER }}.pdf
+            artifacts/pdfSource${{ env.INSTANCE_ID_UPPER }}.html
           retention-days: 7
-  test:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: docs
-          path: artifacts
-
-      - name: Test documentation
-        uses: JetBrains/writerside-checker-action@v1
-        with:
-          instance: ${{ env.INSTANCE }}
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    needs: [ build, test ]
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: docs
-          path: artifacts
-
-      - name: Unzip artifact
-        run: unzip -O UTF-8 -qq "artifacts/${{ needs.build.outputs.artifact }}" -d dir
-
-      - name: Setup Pages
-        uses: actions/configure-pages@v4
-
-      - name: Package and upload Pages artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: dir
-
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
-  publish-indexes:
-    needs: [ build, test, deploy ]
-    runs-on: ubuntu-latest
-    container:
-      image: registry.jetbrains.team/p/writerside/builder/algolia-publisher:2.0.32-3
-    steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: docs
-          path: artifacts
-      - name: Unzip Algolia artifact
-        run: unzip -O UTF-8 -qq "artifacts/${{ needs.build.outputs.algolia_artifact }}" -d algolia-indexes
-      - name: Update Algolia Index
-        run: |
-          if [ -z "${{ secrets.ALGOLIA_KEY }}" ]; then
-            echo "ALGOLIA_KEY secret is not set in GitHub Secrets"
-            exit 1
-          else
-            env "algolia-key=${{ secrets.ALGOLIA_KEY }}" java -jar /opt/builder/help-publication-agent.jar \
-            update-index \
-            --application-name ${{ env.ALGOLIA_APP_NAME }} \
-            --index-name ${{ env.ALGOLIA_INDEX_NAME }} \
-            --product ${{ env.CONFIG_JSON_PRODUCT }} \
-            --version ${{ env.CONFIG_JSON_VERSION }} \
-            --index-directory algolia-indexes/ \
-            2>&1 | tee algolia-update-index-log.txt
-          fi
