--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ permissions:
   pages: write
 
 env:
-  INSTANCE: 'Writerside2/auto'
+  INSTANCE: 'Writerside2/test'
   DOCKER_VERSION: '2.1.2115-p8208'
   ALGOLIA_APP_NAME: 'ERUSDW4898'
   ALGOLIA_INDEX_NAME: 'index_GH_test'
@@ -22,7 +22,7 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container: registry.jetbrains.team/p/writerside/builder/writerside-builder:2.1.TEST-MULTI-INSTANCES
+    container: registry.jetbrains.team/p/writerside/builder/writerside-builder:2.1.TEST-MULTI-INSTANCES3
 #    runs-on: ubuntu-latest
     outputs:
       algolia_artifact: ${{ steps.define-ids.outputs.algolia_artifact }}
@@ -41,6 +41,7 @@ jobs:
           INSTANCE_ID=${INSTANCE#*/}
           INSTANCE_ID_UPPER=$(echo "$INSTANCE_ID" | tr '[:lower:]' '[:upper:]')
           ARTIFACT="webHelp${INSTANCE_ID_UPPER}2-all.zip"
+          ARTIFACT_GROUP="webHelp${INSTANCE_ID_UPPER}2.zip"
           ALGOLIA_ARTIFACT="algolia-indexes-${INSTANCE_ID_UPPER}.zip"
 
           # Print the values
@@ -52,17 +53,17 @@ jobs:
           echo "INSTANCE_ID_UPPER=$INSTANCE_ID_UPPER" >> $GITHUB_ENV
           echo "ARTIFACT=$ARTIFACT" >> $GITHUB_ENV
           echo "ALGOLIA_ARTIFACT=$ALGOLIA_ARTIFACT" >> $GITHUB_ENV
-          echo "artifact=$ARTIFACT" >> $GITHUB_OUTPUT
+          echo "artifact=$ARTIFACT_GROUP" >> $GITHUB_OUTPUT
           echo "algolia_artifact=$ALGOLIA_ARTIFACT" >> $GITHUB_OUTPUT
           
           set -e
           git config --global --add safe.directory .
           export DISPLAY=:99
           Xvfb :99 &
-          /opt/builder/bin/idea.sh helpbuilderinspect -source-dir . -p $INSTANCE --runner github -output-dir artifacts
-          echo "Testing existence of $ARTIFACT..."
+          /opt/builder/bin/idea.sh helpbuilderinspect -source-dir . -g Writerside2/test --runner github -output-dir artifacts
+          echo "Testing existence of $ARTIFACT_GROUP..."
           ls -la artifacts
-          test -e ./artifacts/$ARTIFACT && echo $ARTIFACT exists
+          test -e ./artifacts/$ARTIFACT_GROUP && echo $ARTIFACT_GROUP exists
 
 #      - name: Build docs using Writerside Docker builder
 #        uses: JetBrains/writerside-github-action@v4
