--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container: registry.jetbrains.team/p/writerside/builder/writerside-builder:2.1.TEST-MULTI-INSTANCES3
+    container: registry.jetbrains.team/p/writerside/builder/writerside-builder:2.1.2122-p8252
 #    runs-on: ubuntu-latest
     outputs:
       algolia_artifact: ${{ steps.define-ids.outputs.algolia_artifact }}
@@ -115,17 +115,38 @@ jobs:
   test:
     needs: build
     runs-on: ubuntu-latest
+    container:
+      image: openjdk:18-jdk-alpine
     steps:
       - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
           name: docs
           path: artifacts
+      - name: Add curl
+        run: apk add curl
+      - name: Run Writerside checker
+        working-directory: artifacts
+        run: |
+          curl -o wrs-checker.jar -L https://packages.jetbrains.team/maven/p/writerside/maven/com/jetbrains/writerside/writerside-ci-checker/1.3/writerside-ci-checker-1.3.jar
+          java -jar wrs-checker.jar report.json ${{ env.INSTANCE }}
+  
+  
 
-      - name: Test documentation
-        uses: JetBrains/writerside-checker-action@v1
-        with:
-          instance: ${{ env.INSTANCE }}
+  #  test:
+#    needs: build
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Download artifacts
+#        uses: actions/download-artifact@v4
+#        with:
+#          name: docs
+#          path: artifacts
+#
+#      - name: Test documentation
+#        uses: JetBrains/writerside-checker-action@v1
+#        with:
+#          instance: ${{ env.INSTANCE }}
 
 
   #  build-search-index:
