--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ permissions:
 env:
   INSTANCE: 'Writerside2/test'
   IS_GROUP: 'true'
-  DOCKER_VERSION: '2.1.2122-p8252'
+  DOCKER_VERSION: '2025.03'
   ALGOLIA_APP_NAME: 'ERUSDW4898'
   ALGOLIA_INDEX_NAME: 'index_GH_test'
   CONFIG_JSON_PRODUCT: 'AUTO'
@@ -317,9 +317,7 @@ jobs:
           name: docs
           path: artifacts
       - name: Unzip Algolia artifact
-        run: |
-          unzip -O UTF-8 -qq "artifacts/algolia-indexes-AUTO.zip" -d algolia-indexes
-          unzip -O UTF-8 -qq "artifacts/algolia-indexes-HI.zip" -d algolia-indexes
+        run: unzip -O UTF-8 -qq "artifacts/${{ needs.build.outputs.algolia_artifact }}" -d algolia-indexes
       - name: Update Algolia Index
         run: |
           if [ -z "${{ secrets.ALGOLIA_KEY }}" ]; then
