--- a/Writerside2/writerside.cfg
+++ b/Writerside2/writerside.cfg
@@ -10,8 +10,8 @@
     <images dir="images" web-path="writerside-github"/>
     <instance src="m.tree" web-path="/m/"/>
     <instance src="test.tree" web-path="/t/"/>
-    <instance src="auto.tree" version="1.0" web-path="111"/>
-    <instance src="hi.tree" version="1.0" web-path="222"/>
+    <instance src="auto.tree" version="1.0"/>
+    <instance src="hi.tree" version="1.0"/>
     <build-config dir="configs"/>
     <settings>
         <id-generator-method>LOWER_CASE_DASHES_INTERNATIONAL</id-generator-method>
