--- a/.github/workflows/deploy-backup-group.yml
+++ b/.github/workflows/deploy-backup-group.yml
@@ -9,8 +9,8 @@ permissions:
   pages: write
 
 env:
-  INSTANCE: 'Writerside2/test'
-  IS_GROUP: 'true'
+  INSTANCE: 'Writerside2/hi'
+  IS_GROUP: 'false'
   DOCKER_VERSION: '2025.03'
   ALGOLIA_APP_NAME: 'ERUSDW4898'
   ALGOLIA_INDEX_NAME: 'index_GH_test'
